--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -5,12 +5,12 @@
 $gutter: 6px;
 
 .me-saves {
-  margin: 115px auto 0 auto;
+  margin: 35px auto 0 auto;
   //padding: 0 0 25px 0;
   max-width: 960px;
   position: relative;
   @include mdc-layout-grid-media-query_("phone") {
-    margin: 35px auto 0 auto;
+    margin: 0 auto 0 auto;
     max-width: unset;
     //padding: 35px 0 35px 0;
   }
