--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -1,21 +1,56 @@
 .me-swipable {
   z-index: 2;
   max-width: 420px;
-  margin: 35px auto 10px;
+  margin: 0 auto 0 auto;
   position: relative;
-  padding: 0 $section-padding-phone;
+  //padding: 0 $section-padding-phone;
   width: auto;
+  //height: -webkit-fill-available;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   @include mdc-layout-grid-media-query_("phone") {
-    margin: 0 0 15px 0;
+    //margin: 0 0 15px 0;
+    //height: -webkit-fill-available;
+    //padding: 150px 0 0 0;
+  }
+
+  &__onboarding {
+    height: 100%;
+    //overflow-y: scroll;
+    //overflow-x: hidden;
+    width: 40vw;
+    padding: 25px 30vw;
+    @include mdc-layout-grid-media-query_("phone") {
+      width: calc(100vw - 64px);
+      padding: 150px 24px 66px 24px;
+    }
+
+    & button {
+      @include mdc-button-ink-color($surface-color);
+      @include mdc-states-base-color($brand-color);
+      font-family: $font-primary-family;
+    }
+  }
+
+  &__items {
+    transition: opacity 0.4s linear;
+    max-width: 420px;
+    @include mdc-layout-grid-media-query_("phone") {
+      padding: 94px 24px 0 24px;
+    }
   }
 
   &__question {
     margin: 0 auto 12px auto;
     line-height: 1.3em;
+    text-align: center;
+    @include mdc-layout-grid-media-query_("phone") {
+      text-align: center;
+      max-width: 88%;
+    }
+
     & h2 {
       font-weight: 800;
       font-family: $font-primary-family;
@@ -23,6 +58,7 @@
       margin: 0 0 5px 0;
       line-height: 1em;
     }
+
     & span {
       font-size: 11px;
       font-weight: 200;
@@ -30,6 +66,7 @@
       line-height: 130%;
       color: $font-secondary-color;
       margin: 0 auto;
+      //max-width: 80%;
     }
 
     &.hidden {
@@ -123,9 +160,9 @@
   }
 
   & .stackedcards--animatable {
-    -webkit-transition: all 400ms ease;
-    -o-transition: all 400ms ease;
-    transition: all 400ms ease;
+    -webkit-transition: all 650ms ease;
+    -o-transition: all 650ms ease;
+    transition: all 650ms ease;
   }
 
   & .stackedcards-overlay {
@@ -140,10 +177,10 @@
     height: 250px; /* set 100% */
     will-change: transform, opacity;
     top: 0;
-    border-radius: 6px;
+    border-radius: 12px;
     overflow: hidden;
     @include mdc-layout-grid-media-query_("phone") {
-      height: 160px;
+      height: 190px;
     }
   }
 
@@ -290,7 +327,6 @@
   //  //@include mdc-button-ink-color($dislike-color);
   //  //@include mdc-states-base-color($dislike-color);
   //}
-
 
 
   /* elements on stacked cards */
