Refactor in bot module

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -7,7 +7,7 @@ $border-color: #E1E1E1;
 
 $like-color: $brand-color;
 $dislike-color: #8F1717;
-$maybe-color: $brand-color;
+$maybe-color: $border-color;
 
 $font-primary-family: 'Montserrat', sans-serif;
 $font-secondary-family: 'Roboto', sans-serif;
