--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -48,7 +48,7 @@
       </button>
     </div>
     <div class="final-state hidden">
-      <h2>Carregando novas sugestões...</h2>
+      <h2>Buscando eventos específicos para você...</h2>
     </div>
   </div>
 </div>
