--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -26,6 +26,25 @@
     </div>
   </div>
 
+
+  <div class="mdc-form-field">
+    <div class="mdc-checkbox">
+      <%= form.check_box(:personas_assortment_finished?, {class: 'mdc-checkbox__native-control'}, 'true', 'false') %>
+      <%= @user.personas_assortment_finished? %>
+      <%= console %>
+      <div class="mdc-checkbox__background">
+        <svg class="mdc-checkbox__checkmark"
+             viewBox="0 0 24 24">
+          <path class="mdc-checkbox__checkmark-path"
+                fill="none"
+                d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+        </svg>
+        <div class="mdc-checkbox__mixedmark"></div>
+      </div>
+    </div>
+    <label for="checkbox-1">Checkbox 1</label>
+  </div>
+
   <div class="me-text-field__container me-text-field--fullwidth">
     <div class="mdc-select mdc-select--outlined">
       <i class="mdc-select__dropdown-icon"></i>
