--- a/web/app/views/layouts/_json_ld.html.erb
+++ b/web/app/views/layouts/_json_ld.html.erb
@@ -26,7 +26,7 @@
         },
         "offers": {
           "@type": "AggregateOffer",
-          "lowPrice": "<%= event.details_prices.min %>",
+          "lowPrice": "<%= event.details_prices.try(:min) %>",
           "priceCurrency": "BRL"
         }
     } <%= "," unless @collection[:events].size == event_counter + 1 %>
