Fix swipable and add new logo and colors

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,4 +1,4 @@
-$brand-color: #00AD54; // #2ECC71; // #5EEDDE; // #31916C; // #26B679
+$brand-color: #03994C; // #2ECC71; // #5EEDDE; // #31916C; // #26B679
 $brand-color-right: #2191FB;
 $brand-color-high-contrast: #0C0F0A; //darken($brand-color, 10%);
 //$brand-color-intersect: #2bb3ae;
