--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -30,7 +30,7 @@
 
   <% else %>
     <% if current_user&.personas_assortment_finished? %>
-      <% if @items.dig(:today, :detail, :total_events_in_collection) %>
+      <% if @items.dig(:today, :detail, :total_events_in_collection).try {|counter| counter > 0} %>
         <%= render partial: "components/collection/collection",
                    locals:  {
                        items:      @items[:today],
@@ -51,8 +51,7 @@
                        }
                    } %>
       <% end %>
-
-      <% if current_user && @items.dig(:follow, :detail, :total_events_in_collection) %>
+      <% if current_user && @items.dig(:follow, :detail, :total_events_in_collection).try {|counter| counter > 0} %>
         <%= render partial: "components/collection/collection",
                    locals:  {
                        items:      @items[:follow],
@@ -75,7 +74,7 @@
       <% end %>
 
 
-      <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection) %>
+      <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try {|counter| counter > 0} %>
         <%= render partial: "components/collection/collection",
                    locals:  {
                        items:      @items[:user_suggestions],
@@ -99,7 +98,7 @@
       <% end %>
 
 
-      <% if @items.dig(:user_personas, :detail, :total_events_in_collection)  %>
+      <% if @items.dig(:user_personas, :detail, :total_events_in_collection).try {|counter| counter > 0}  %>
 
         <%= render partial: "components/collection/collection",
                    locals:  {
