--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -81,6 +81,8 @@
            title="<%= event.details_name %>">
         <%= link_to limit_name_size(event.details_name), event_path(event) %>
       </div>
+      <%= event.ml_data['personas']['primary'].to_json %>
+      <%= event.ml_data['categories']['primary'].to_json %>
     </div>
     <div class="me-card__tertiary-section">
       <% if display_place %>
