--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -49,7 +49,11 @@ section {
   user-select: none;
 
   @include mobile-only {
-    margin: 30px 0 35px 0;
+    margin: 24px 0 35px 0;
+
+    & img {
+      max-width: 200px;
+    }
   }
 
   .is-pwa & {
