--- a/web/app/views/users/index.html.erb
+++ b/web/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Users</h1>
 
-<table>
+<table style="margin: auto">
   <thead>
     <tr>
       <th>Id</th>
@@ -14,9 +14,12 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.id %></td>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Enviar email', send_request_invite_confirmation_path(user), remote: true %></td>
       </tr>
     <% end %>
   </tbody>
